--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,671 +1,197 @@
-body{
-    position: relative;
-
-    font-family: 'Clash Grotesk', sans-serif;
-    background-color: var(--background);
-    color: var(--text);
-
-    text-rendering: optimizeLegibility;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-
-    overflow-x: hidden;
-
-}
-
-.content{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-
-    width: 100%;
-}
-
-.top{
-    position: fixed;
-
-    display: none;
-
-    bottom: 0;
-    right: 0;
-
-    padding: 1rem;
-    margin: 0 1.5rem 1.5rem 0;
-
-    background-color: var(--secondary);
-    border-radius: 100%;
-
-    z-index: 1000000;
-}
-
-.top svg{
-    width: 25px;
-    height: 20px;
-
-    fill: var(--text);
-
-    transform: translateY(1px);
-}
-
-
-
-nav{
-    position: fixed;
-
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-
-    top: 0;
-
-    width: 100%;
-    padding: 2rem;
-    background-color: var(--background);
-    border-bottom: 1px solid var(--secondary);
-
-    margin: 0 0 2rem 0;
-}
-
-nav ul{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    list-style: none;
-
-    gap: 2rem;
-}
-nav ul li a{
-    color: var(--text);
-    text-decoration: none;
-    font-size: 1.5rem;
-    font-weight: 500;
-
-    transition: 0.5s;
-}
-
-nav ul li a:hover{
-    color: var(--accent);
-    text-decoration: underline;
-    transform: scale(1.1);
-
-    pointer: cursor;
-
-    transition: 0.5s;
-}
-
-main{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-
-    width: 100%;
-    min-height: 100svh;
-
-    padding: 2rem;
-}
-
-main svg{
-    position: absolute;
-
-    fill: var(--text);
-
-    width: 80svw;
-    height: 80svh;
-
-    top: 100px;
-    left: 1100px;
-
-    z-index: -1;
-}
-
-main h1{
-    font-size: 4rem;
-    margin: 0 0 2rem 30px ;
-}
-
-main p{
-    font-size: 1.5rem;
-    margin: 0 0 2rem 30px;
-
-    width: 50%;
-}
-
-#about{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-
-    min-height: 100svh;
-    width: 100%;
-
-    border-top: 1px solid var(--secondary);
-
-    color: var(--text);
-}
-
-#about h2{
-    font-size: 3rem;
-    margin: 0 0 1rem 0;
-}
- .header {
-     display: flex;
-     flex-direction: column;
-     justify-content: center;
-     align-items: center;
-
-     width: 100vw;
-
-     background-color: var(--background);
-     color: var(--text);
-
-     gap: 3rem;
- }
-
-.header svg{
-    fill: var(--text);
-    width: 100px;
-    height: 100px;
-}
-
-#about p{
-    font-size: 1.5rem;
-    margin: 0 0 1rem 0;
-
-    width: 50%;
-}
-
-#cennik{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-
-    min-height: 100svh;
-    width: 100%;
-
-    border-top: 1px solid var(--secondary);
-    color: var(--text);
-    gap: 3rem;
-
-    padding: 2rem 0 2rem 0;
-}
-
-#cennik svg{
-    fill: var(--text);
-    width: 100px;
-    min-height: 100px;
-}
-
-#cennik h3{
-    font-size: 3rem;
-    margin: 0 0 1rem 0;
-}
-
-#cennik p{
-    font-size: 1.5rem;
-    margin: 0 0 1rem 0;
-
-    width: 50%;
-}
-
-#cennik table{
-    width: 50%;
-    border-collapse: collapse;
-}
-
-#cennik th, #cennik td{
-    border: 1px solid var(--secondary);
-    padding: 1rem;
-}
-
-#cennik th{
-    background-color: var(--secondary);
-    color: var(--text);
-}
-
-#kontakt{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-
-    min-height: 100svh;
-    width: 100%;
-
-    border-top: 1px solid var(--secondary);
-
-    color: var(--text);
-
-    gap: 3rem;
-}
-
-.kontakt-content{
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-
-    width: 100%;
-}
-
-.kontakt-left{
-    position: relative;
-
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-
-    border-right: 2px solid var(--secondary);
-
-    width: 60svh;
-}
-
-.kontakt-left::before {
-    content: "Albo";
-    font-size: 1.5rem;
-    position: absolute;
-    right: -40px;
-    top: 42.5%;
-    background: var(--background);
-    padding: 0 10px;
-}
-
-#openModal {
-    position: relative;
-    padding: 1rem 2rem 0.5rem 2.5rem;
-    color: #000000;
-    background: transparent;
-    font-family: var(--font-family);
-    font-weight: 600;
-    font-size: 18px;
-    text-decoration: none;
-    border: 3px solid var(--secondary);
-    -webkit-transition: padding 0.3s ease-in-out;
-    transition: padding 0.3s ease-in-out;
-}
-
-#openModal:before {
-    content: "";
-    position: absolute;
-    top: 0.5rem;
-    left: 0.5rem;
-    z-index: -1;
+body, html {
+    margin: 0;
+    padding: 0;
+
+    background-color: #181a1b;
+    width: 100svw;
     height: 100%;
-    width: 100%;
-    background-color: var(--accent);
-    border-right: 3px solid var(--accent);
-    border-bottom: 3px solid var(--accent);
-    -webkit-transition: all 0.3s ease-in-out;
-    transition: all 0.3s ease-in-out;
-}
+    min-height: 100svh;
 
-#openModal:hover {
-    padding: 0.75rem 2.25rem;
-}
+    font-family: system-ui, -apple-system, var(--font-family), Roboto, sans-serif;
+    font-style: normal;
+    color: #000;
 
-#openModal:hover:before {
-    top: 0;
-    left: 0;
-}
-
-.kontakt-right{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-
-    width: 60svh;
-}
-
-#kontakt svg{
-    fill: var(--text);
-    width: 100px;
-    height: 100px;
-}
-
-#kontakt h4{
-    font-size: 3rem;
-    margin: 0 0 1rem 0;
-}
-
-#kontakt p{
-    display: flex;
-    flex-direction: column;
-
-    font-size: 1.5rem;
-    margin: 0 0 1rem 0;
-
-    width: 50%;
-}
-
-#kontakt p a{
-    color: var(--accent);
-    text-decoration: none;
-    font-weight: 500;
-
-    transition: 0.5s;
-}
-
-#kontakt p a:hover{
-    color: var(--primary);
-    text-decoration: underline;
-    transform: scale(1.1);
-
-    pointer: cursor;
-
-    transition: 0.5s;
-}
-
-body.modal-open {
+    scroll-behavior: smooth;
+    position: relative;
     overflow: hidden;
 }
 
-.modal {
-    display: none;
-    position: fixed;
-    z-index: 1;
-    left: 0;
-    top: 0;
-    width: 100%;
+.content {
+    z-index: 2;
+
     height: 100%;
-    overflow: auto;
-    background-color: rgb(0,0,0);
-    background-color: rgba(0,0,0,0.4);
-    backdrop-filter: blur(10px);
-
-}
-
-.modal-content {
-    position: fixed;
-
-    top: -10%;
-    left: 10%;
-
-    background-color: var(--background);
-    color: var(--text);
-
-    border: none;
-    border-radius: 10px;
-
-    margin: 15% auto;
-    padding: 20px;
-    width: 80%;
-
-    animation: scale 0.5s forwards;
-}
-
-@keyframes scale {
-    0% {
-        transform: scale(0.5);
-    }
-    50% {
-        transform: scale(1.1);
-    }
-    100% {
-        transform: scale(1);
-    }
-}
-
-iframe {
-    width: 100%;
-    height: 50svh;
-
-    border: none;
-
-    border-radius: 10px;
-}
-
-.close{
-    color: var(--text);
-    float: right;
-
-    scale: 3;
-
-    transition: 0.3s;
-}
-
-.close:hover{
-    color: #f00;
-
-    pointer: cursor;
-
-    transition: 0.5s;
-}
-
-.close:active{
-    scale: 2.5;
-}
-
-footer{
-    position: fixed;
 
     display: flex;
-    flex-direction: row;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
+    gap: 24px;
+}
 
+h1, h2, p, #message {
+    font: 700 96px/100% var(--font-family);
+    text-align: center;
+    color: #FFFFFFD6;
+    text-shadow: 0 0 10px #ffffff;
+}
+h2 {
+    font: 700 64px/100% var(--font-family);
+}
+
+p {
+    font: 400 24px/100% var(--font-family);
+}
+
+#message{
+    font: 700 36px/100% var(--font-family);
+    pointer-events: none;
+}
+
+.links, .links_c2{
+    z-index: 1;
+
+    width: fit-content;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 24px;
+
+    border: 2px;
+    text-shadow: 0 0 10px #ffffff;
+}
+
+.links a, .links_c2 a, a:visited {
+    padding: 10px 20px;
+    max-width: max-content;
     width: 100%;
-    padding: 2rem;
-    background-color: var(--background);
-    border-top: 1px solid var(--secondary);
+    min-width: 189px;
 
-    margin: 2rem 0 0 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
 
-    gap: 2rem;
+    background-color: #2f2f2f;
+    border-radius: 16px;
+    border: 3px solid white;
 
-    bottom: 0;
-}
-
-footer p{
-    font-size: 1.5rem;
-    margin: 0 0 1rem 0;
-}
-
-footer p a{
-    color: var(--accent);
+    font: 500 18px/24px var(--font-family);
+    color: #FFF;
     text-decoration: none;
-    font-weight: 500;
 
-    transition: 0.5s;
+    box-shadow: 0 0 10px #3b3838;
+
+    transition: background-color 0.5s ease, transform 0.4s ease, border-color 0.8s ease;
 }
 
-footer p a:hover{
-    color: var(--primary);
-    text-decoration: underline;
+.links a:active, .links_c2 a:active{
+    transform: scale(0.9);
+}
+
+a:hover {
+    background-color: #111;
+    box-shadow: 0 0 20px #8006da;
+    text-shadow: 0 0 20px #8006da;
     transform: scale(1.1);
-
-    pointer: cursor;
-
-    transition: 0.5s;
+    border-color: #8006da;
 }
 
-@media (max-width: 768px) {
-    .top{
-        display: inline;
-    }
+.lines {
+    z-index: -1;
+    top: -50vh;
+    left: -50vw;
+    right: 0;
+    bottom: 0;
+    height: 200vh;
+    margin: auto;
+    width: 200vw;
+}
 
-    .top-hidden {
-        display: none;
-    }
+.line {
+    z-index: 0;
+    position: absolute;
+    width: 1px;
+    height: 200vh;
+    top: -30vh;
+    left: 50%;
+    overflow: hidden;
+    transform: rotate(-45deg);
+}
 
-    body {
-        font-size: 16px;
-    }
+.line::after {
+    content: "";
+    display: block;
+    position: absolute;
+    height: 15vh;
+    width: 100%;
+    top: -50%;
+    left: 0;
+    background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 0%, #ffffff 75%, #ffffff 100%);
+    animation: drop 7s 0s infinite;
+    animation-fill-mode: forwards;
+    animation-timing-function: cubic-bezier(0.4, 0.26, 0, 0.97);
+}
 
-    .content {
+.line:nth-child(1) {
+    margin-left: -25%;
+}
+
+.line:nth-child(1)::after {
+    animation-delay: 2s;
+}
+
+.line:nth-child(3) {
+    margin-left: 25%;
+}
+
+.line:nth-child(3)::after {
+    animation-delay: 2.5s;
+}
+
+@keyframes drop {
+    0% {
+        top: -50%;
+    }
+    100% {
+        top: 150%;
+    }
+}
+/*Stars*/
+#particles-js {
+    z-index: 0;
+    position: absolute;
+    top: 0;
+
+    height: 100vh;
+    width: 100vw;
+
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+/*Mobile view*/
+@media (width <= 660px) {
+    body{
+        height: 100svh;
+        width: 100svw;
+    }
+    h1 {
+        font-size: 3.5em;
+        height: 30vh;
+    }
+    .content{
+        padding: 16px;
+    }
+    #message{
+        margin: 20px;
+    }
+    .links, .links_c2 {
         flex-direction: column;
-    }
-
-    nav {
-        position: relative;
-        flex-direction: column;
-        padding: 1rem;
-    }
-
-    nav ul {
-        flex-direction: column;
-        gap: 1rem;
-    }
-
-    nav ul li a {
-        font-size: 1.2rem;
-    }
-
-    main {
-        padding: 1rem;
-    }
-
-    main svg {
-        width: 70svh;
-        height: 70svh;
-
-        opacity: 0.5;
-        fill: var(--secondary);
-
-        top: 300px;
-        left: 0;
-
-        z-index: -1;
-    }
-
-    main h1 {
-        font-size: 2rem;
-        margin: 0 0 1rem 0;
-    }
-
-    main p {
-        font-size: 1rem;
-        margin: 0 0 1rem 0;
-        width: 100%;
-    }
-
-    #about {
-        padding: 1.5rem;
-    }
-
-    #about h2 {
-        font-size: 2rem;
-        margin: 0 0 1rem 0;
-    }
-
-    #about p {
-        font-size: 1rem;
-        margin: 0 0 1rem 0;
-        width: 100%;
-    }
-
-    #cennik {
-        padding: 1rem;
-    }
-
-    #cennik h3 {
-        font-size: 2rem;
-        margin: 0 0 1rem 0;
-    }
-
-    #cennik p {
-        font-size: 1rem;
-        margin: 0 0 1rem 0;
-        width: 100%;
-    }
-
-    #cennik table {
-        width: 100%;
-    }
-
-    #cennik th, #cennik td {
-        padding: 0.5rem;
-    }
-
-    #cennik th {
-        font-size: 1rem;
-    }
-
-    #kontakt {
-        padding: 1rem;
-
-        min-height: 100svh;
-        height: fit-content;
-    }
-
-    .kontakt-content {
-        flex-direction: column;
-
-        padding: 1rem;
-    }
-
-    .kontakt-left {
-        width: 100%;
-        border-right: none;
-    }
-
-    .kontakt-left::before {
-        display: none;
-    }
-
-    .kontakt-right {
-        width: 100%;
-    }
-
-    #kontakt svg {
-        width: 50px;
-        height: 50px;
-    }
-
-    #kontakt h4 {
-        font-size: 2rem;
-        margin: 0 0 1rem 0;
-    }
-
-    #kontakt p {
-        font-size: 1rem;
-        margin: 0 0 1rem 0;
-        width: 100%;
-    }
-
-    #kontakt p a {
-        font-size: 1rem;
-    }
-
-    footer {
-        padding: 1rem;
-        height: 100px;
-    }
-
-    footer p {
-        font-size: 1rem;
-        margin: 0 0 1rem 0;
-    }
-
-    footer p a {
-        font-size: 1rem;
-    }
-
-    .modal-content {
-        width: 100%;
-        top: 0;
-        left: 0;
-        margin: 0;
-        padding: 1rem;
-    }
-
-    iframe {
-        height: 50svh;
-    }
-
-    .close {
-        scale: 2;
-    }
-
-    .close:hover {
-        color: #f00;
-    }
-
-    .close:active {
-        scale: 1.5;
+        align-content: center;
+        align-items: center;
+        align-self: center;
+        max-width: max-content;
+        transform: translateY(-40px);
     }
 }
